[package]
name = "pwmatt_game"
version = "0.1.0"
edition = "2021"

[dependencies]
# remove  from builded project otherwhise red - https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
rand = "0.8.5"



# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# LLD linker: The Rust compiler spends a lot of time in the "link" step. LLD is much faster at linking than the default Rust linker. To install LLD, find your OS below and run the given command:
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"